--- a/index.html
+++ b/index.html
@@ -368,42 +368,72 @@
 
         <ul class="customer-list">
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-yaco"></use>
               </svg>
             </a>
           </li>
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-company"></use>
               </svg>
             </a>
           </li>
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-company2"></use>
               </svg>
             </a>
           </li>
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-foster_peters"></use>
               </svg>
             </a>
           </li>
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-brand"></use>
               </svg>
             </a>
           </li>
           <li class="customer-item">
-            <a href="#" target="_blank" rel="noopener noreferrer nofollow">
+            <a
+              class="customer-link"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+            >
               <svg>
                 <use href="./src/img/sprite.svg#icon-tag_line"></use>
               </svg>
@@ -413,12 +443,69 @@
       </section>
     </main>
     <footer>
-      <div class="container">
-        <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-wrapper">
+        <div class="footer-left-side">
+          <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-social">
+          <h2 class="footer-social-title">Social Media</h2>
+
+          <ul class="footer-social-list">
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.instagram.com/escbrk/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="./contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.facebook.com/Escobrk"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.linkedin.com/in/paul-yakymenko/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
