--- a/index.html
+++ b/index.html
@@ -31,34 +31,38 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav-container container">
-        <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+      <div class="container">
+        <nav class="header-nav-container">
+          <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
 
-        <div class="header-nav-wrapper">
-          <ul class="header-nav">
-            <li>
-              <a class="header-nav-link active" href="/index.html">Studio</a>
-            </li>
-            <li>
-              <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
-            </li>
-            <li><a class="header-nav-link" href="/contact.html">Contact</a></li>
-          </ul>
+          <div class="header-nav-wrapper">
+            <ul class="header-nav">
+              <li>
+                <a class="header-nav-link active" href="/index.html">Studio</a>
+              </li>
+              <li>
+                <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
+              </li>
+              <li>
+                <a class="header-nav-link" href="/contact.html">Contact</a>
+              </li>
+            </ul>
 
-          <ul>
-            <li>
-              <a class="header-contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="header-contact" href="tel:+11000111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
+            <ul>
+              <li>
+                <a class="header-contact" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="header-contact" href="tel:+11000111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main>
       <section class="hero">
@@ -69,73 +73,77 @@
       </section>
 
       <section class="advantages">
-        <h2 class="visually-hidden">Advantages</h2>
-        <ul class="advantages-list container">
-          <li class="advantages-item">
-            <div>
-              <svg>
-                <use href="./src/img/sprite.svg#icon-antenna"></use>
-              </svg>
-            </div>
-            <h3 class="advantages-title">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <div>
-              <svg>
-                <use href="./src/img/sprite.svg#icon-clock"></use>
-              </svg>
-            </div>
-            <h3 class="advantages-title">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <div>
-              <svg>
-                <use href="./src/img/sprite.svg#icon-diagram"></use>
-              </svg>
-            </div>
-            <h3 class="advantages-title">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <div>
-              <svg>
-                <use href="./src/img/sprite.svg#icon-astronaut"></use>
-              </svg>
-            </div>
-            <h3 class="advantages-title">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <div>
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="advantages-title">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div>
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="advantages-title">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div>
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="advantages-title">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <div>
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="advantages-title">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="our-products container">
-        <h2 class="title">What are we doing</h2>
+      <section class="our-products">
+        <div class="container">
+          <h2 class="title">What are we doing</h2>
 
-        <ul class="product-list">
-          <li class="product-item">
-            <img src="./src/img/products/computer.jpg" alt="product1" />
-          </li>
-          <li class="product-item">
-            <img src="./src/img/products/app.jpg" alt="product2" />
-          </li>
-          <li class="product-item">
-            <img src="./src/img/products/app2.jpg" alt="product3" />
-          </li>
-        </ul>
+          <ul class="product-list">
+            <li class="product-item">
+              <img src="./src/img/products/computer.jpg" alt="product1" />
+            </li>
+            <li class="product-item">
+              <img src="./src/img/products/app.jpg" alt="product2" />
+            </li>
+            <li class="product-item">
+              <img src="./src/img/products/app2.jpg" alt="product3" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="our-team">
@@ -363,85 +371,88 @@
         </div>
       </section>
 
-      <section class="customers container">
-        <h2 class="title">Customers</h2>
+      <section class="customers">
+        <div class="container">
+          <h2 class="title">Customers</h2>
 
-        <ul class="customer-list">
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-yaco"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-company"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-company2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-foster_peters"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-brand"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a
-              class="customer-link"
-              href="#"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              <svg>
-                <use href="./src/img/sprite.svg#icon-tag_line"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+          <ul class="customer-list">
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-company2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-foster_peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a
+                class="customer-link"
+                href="/contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-tag_line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
     <footer>
       <div class="container footer-wrapper">
         <div class="footer-left-side">
