--- a/portfolio.html
+++ b/portfolio.html
@@ -247,13 +247,70 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <div class="container">
-        <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+<footer>
+      <div class="container footer-wrapper">
+        <div class="footer-left-side">
+          <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-social">
+          <h2 class="footer-social-title">Social Media</h2>
+
+          <ul class="footer-social-list">
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.instagram.com/escbrk/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="./contact.html"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.facebook.com/Escobrk"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="footer-social-link"
+                href="https://www.linkedin.com/in/paul-yakymenko/"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg>
+                  <use href="./src/img/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
