--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,14 @@
 
         <div class="header-nav-wrapper">
           <ul class="header-nav">
-            <li><a class="header-nav-link" href="/index.html">Studio</a></li>
+            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
             <li>
-              <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
+              <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="header-nav-link active" href="/contact.html">Contact</a>
+              <a class="header-nav-link active" href="./contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
 
@@ -65,7 +67,7 @@
       <img src="./src/img/404.png" alt="404" />
     </main>
 
-<footer>
+    <footer>
       <div class="container footer-wrapper">
         <div class="footer-left-side">
           <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
