--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           <div class="header-nav-wrapper">
             <ul class="header-nav">
               <li>
-                <a class="header-nav-link active" href="/index.html">Studio</a>
+                <a class="header-nav-link active" href="./index.html">Studio</a>
               </li>
               <li>
-                <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
+                <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
               </li>
               <li>
-                <a class="header-nav-link" href="/contact.html">Contact</a>
+                <a class="header-nav-link" href="./contact.html">Contact</a>
               </li>
             </ul>
 
@@ -379,7 +379,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -391,7 +391,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -403,7 +403,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -415,7 +415,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -427,7 +427,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
@@ -439,7 +439,7 @@
             <li class="customer-item">
               <a
                 class="customer-link"
-                href="/contact.html"
+                href="./contact.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
