--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,13 @@
 
         <div class="header-nav-wrapper">
           <ul class="header-nav">
-            <li><a class="header-nav-link" href="/index.html">Studio</a></li>
+            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
             <li>
-              <a class="header-nav-link active" href="/portfolio.html"
+              <a class="header-nav-link active" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li><a class="header-nav-link" href="/contact.html">Contact</a></li>
+            <li><a class="header-nav-link" href="./contact.html">Contact</a></li>
           </ul>
 
           <ul>
