--- a/404.html
+++ b/404.html
@@ -32,9 +32,7 @@
   <body>
     <header class="header">
       <nav class="header-nav-container container">
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
-        >
+        <a class="logo" href="./index.html"><span class="accent">Web</span>Studio</a>
 
         <div class="header-nav-wrapper">
           <ul class="header-nav">
@@ -43,9 +41,7 @@
               <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="header-nav-link active" href="./contact.html"
-                >Contact</a
-              >
+              <a class="header-nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
 
@@ -66,7 +62,7 @@
     </header>
 
     <main>
-      <img src="./src/img/404(development).png" alt="404" />
+      <img src="./src/img/404.png" alt="404" />
     </main>
 
     <footer>
@@ -98,7 +94,7 @@
             <li>
               <a
                 class="footer-social-link"
-                href="./contact.html"
+                href="./404.html"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
               >
