--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,14 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./src/css/styles.css" />
+    <link rel="stylesheet" href="./src/css/main.css" />
   </head>
   <body>
     <header class="header">
       <nav class="header-nav-container container">
-        <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          ><span class="accent">Web</span>Studio</a
+        >
 
         <div class="header-nav-wrapper">
           <ul class="header-nav">
@@ -42,7 +44,9 @@
                 >Portfolio</a
               >
             </li>
-            <li><a class="header-nav-link" href="./contact.html">Contact</a></li>
+            <li>
+              <a class="header-nav-link" href="./contact.html">Contact</a>
+            </li>
           </ul>
 
           <ul>
@@ -247,7 +251,7 @@
         </ul>
       </section>
     </main>
-<footer>
+    <footer>
       <div class="container footer-wrapper">
         <div class="footer-left-side">
           <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
