--- a/index.html
+++ b/index.html
@@ -524,32 +524,101 @@
 
     <div class="backdrop">
       <div class="backdrop-content">
-        <button type="button">X</button>
+        <button type="button" class="close-modal-btn">
+          <svg class="close-modal-icon">
+            <use href="./src/img/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+
         <h2 class="backdrop-title">
           Leave your contacts and we will call you back
         </h2>
         <form class="backdrop-form">
-          <label for="name">Name</label>
-          <input type="text" id="name" />
+          <div class="input-container">
+            <label class="order-form-label" for="name">Name</label>
 
-          <label for="phone">Phone</label>
-          <input type="tel" id="phone" />
+            <div class="input-wrapper">
+              <input
+                class="order-form-input"
+                type="text"
+                id="name"
+                name="name"
+                required
+              />
 
-          <label for="email">Email</label>
-          <input type="email" id="email" />
+              <svg class="form-icon">
+                <use href="./src/img/sprite.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
 
-          <label for="message">Message</label>
-          <textarea id="message"></textarea>
+          <div class="input-container">
+            <label class="order-form-label" for="phone">Phone</label>
 
-          <label for="agreement"
-            >I accept the terms and conditions of the
-            <a href="./contact.html">Privacy Policy</a></label
-          >
-          <input type="checkbox" name="agreement" id="agreement" />
+            <div class="input-wrapper">
+              <input
+                class="order-form-input"
+                type="tel"
+                id="phone"
+                name="phone"
+                required
+              />
+
+              <svg class="form-icon">
+                <use href="./src/img/sprite.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="input-container">
+            <label class="order-form-label" for="email">Email</label>
+
+            <div class="input-wrapper">
+              <input
+                class="order-form-input"
+                type="email"
+                id="email"
+                name="email"
+                required
+              />
+
+              <svg class="form-icon">
+                <use href="./src/img/sprite.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="input-container">
+            <label class="order-form-label" for="message">Message</label>
+            <textarea
+              class="order-form-textarea"
+              id="message"
+              name="message"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="input-container custom-checkbox-styles">
+            <input
+              class="checkbox-original"
+              type="checkbox"
+              name="agreement"
+              id="agreement"
+              required
+            />
+            <label class="custom-checkbox-label" for="agreement"
+              >I accept the terms and conditions of the&nbsp;
+              <a class="privacy-policy-link" href="./contact.html"
+                >Privacy Policy</a
+              ></label
+            >
+          </div>
 
           <button type="submit" class="form-btn">Send</button>
         </form>
       </div>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
