--- a/index.html
+++ b/index.html
@@ -554,10 +554,9 @@
           </div>
         </div>
 
-        
-      <div class="form-wrapper">
+        <div class="form-wrapper">
           <label class="footer-title" for="email">Subscribe</label>
-  
+
           <form class="footer-form">
             <input
               class="footer-input"
@@ -565,7 +564,7 @@
               id="email"
               placeholder="E-mail"
             />
-  
+
             <button class="footer-form-btn" type="submit">
               Subscribe
               <svg class="footer-form-btn-icon" width="24" height="24">
@@ -573,11 +572,11 @@
               </svg>
             </button>
           </form>
-      </div>
+        </div>
       </div>
     </footer>
 
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="backdrop-content">
         <button type="button" class="close-modal-btn">
           <svg class="close-modal-icon">
@@ -672,15 +671,68 @@
           <button type="submit" class="form-btn">Send</button>
         </form>
       </div>
-    </div> -->
-
-    <div class="mobile-menu">
-      <!-- <button class="mobile-close-btn" type="button">
-        <svg width="32" height="22">
-          <use href="./src/img/sprite.svg#"></use>
-        </svg>
-      </button> -->
     </div>
+
+    <div class="mobile-menu is-mobile-menu-open">
+      <button class="close-modal-btn" type="button">
+        <svg class="close-modal-icon" width="32" height="22">
+          <use href="./src/img/sprite.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <ul class="pages-list">
+        <li class="pages-item">
+          <a class="pages-list-link active" href="/index.html">Studio</a>
+        </li>
+        <li class="pages-item">
+          <a class="pages-list-link" href="/portfolio.html">Portfolio</a>
+        </li>
+        <li class="pages-item">
+          <a class="pages-list-link" href="/contacts.html">Contacts</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contact-list">
+        <li class="mobile-contact-item">
+          <a class="mobile-contact-link" href="tel:+11000111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="mobile-contact-item">
+          <a class="mobile-contact-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="social-list">
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-instagram"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-twitter"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-facebook"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-linkedin"></use></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
