--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
       </div>
     </div>
 
-    <div class="mobile-menu is-mobile-menu-open">
+    <div class="mobile-menu">
       <button class="close-modal-btn" type="button">
         <svg class="close-modal-icon" width="32" height="22">
           <use href="./src/img/sprite.svg#icon-close"></use>
