--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
           <ul class="header-nav">
             <li>
-              <a class="header-nav-link active" href="./index.html">Studio</a>
+              <a class="header-nav-link active" href="/index.html">Studio</a>
             </li>
             <li>
-              <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
+              <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="header-nav-link" href="./contact.html">Contact</a>
+              <a class="header-nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </nav>
@@ -517,7 +517,7 @@
               <li>
                 <a
                   class="footer-social-link"
-                  href="./contact.html"
+                  href="/contact.html"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
