--- a/portfolio.html
+++ b/portfolio.html
@@ -27,29 +27,39 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav-container container">
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
-        >
+      <div class="container">
+        <nav class="header-nav-container">
+          <a class="logo" href="./index.html"
+            ><span class="accent">Web</span>Studio</a
+          >
 
-        <div class="header-nav-wrapper">
+          <button class="burger-btn" type="button">
+            <svg width="32" height="22">
+              <use href="./src/img/sprite.svg#icon-burger"></use>
+            </svg>
+          </button>
+
           <ul class="header-nav">
-            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
             <li>
-              <a class="header-nav-link active" href="./portfolio.html"
+              <a class="header-nav-link" href="/index.html">Studio</a>
+            </li>
+            <li>
+              <a class="header-nav-link active" href="/portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li>
-              <a class="header-nav-link" href="./contact.html">Contact</a>
+              <a class="header-nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
+        </nav>
 
-          <ul>
+        <address>
+          <ul class="header-contact-list">
             <li>
               <a class="header-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -61,9 +71,10 @@
               >
             </li>
           </ul>
-        </div>
-      </nav>
+        </address>
+      </div>
     </header>
+
     <main>
       <section class="portfolio-section container">
         <h1 class="visually-hidden">Portfolio</h1>
@@ -251,71 +262,156 @@
         </ul>
       </section>
     </main>
+
     <footer>
-      <div class="container footer-wrapper">
-        <div class="footer-left-side">
-          <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
-          <p class="footer-description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+      <div class="container footer-container">
+        <div class="footer-wrapper">
+          <div class="footer-info-wrapper">
+            <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+            <p class="footer-description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="footer-social">
+            <h2 class="footer-title">Social Media</h2>
+
+            <ul class="footer-social-list">
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.instagram.com/escbrk/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="/contact.html"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.facebook.com/Escobrk"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.linkedin.com/in/paul-yakymenko/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-social">
-          <h2 class="footer-social-title">Social Media</h2>
+        <div class="form-wrapper">
+          <label class="footer-title" for="email">Subscribe</label>
 
-          <ul class="footer-social-list">
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.instagram.com/escbrk/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="./contact.html"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.facebook.com/Escobrk"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.linkedin.com/in/paul-yakymenko/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <form class="footer-form">
+            <input
+              class="footer-input"
+              type="email"
+              id="email"
+              placeholder="E-mail"
+            />
+
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-btn-icon" width="24" height="24">
+                <use href="./src/img/sprite.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+
+    <div class="mobile-menu">
+      <button class="close-modal-btn" type="button">
+        <svg class="close-modal-icon" width="32" height="22">
+          <use href="./src/img/sprite.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <ul class="pages-list">
+        <li class="pages-item">
+          <a class="pages-list-link" href="/index.html">Studio</a>
+        </li>
+        <li class="pages-item">
+          <a class="pages-list-link active" href="/portfolio.html">Portfolio</a>
+        </li>
+        <li class="pages-item">
+          <a class="pages-list-link" href="/contacts.html">Contacts</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contact-list">
+        <li class="mobile-contact-item">
+          <a class="mobile-contact-link" href="tel:+11000111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="mobile-contact-item">
+          <a class="mobile-contact-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="social-list">
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-instagram"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-twitter"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-facebook"></use></svg
+          ></a>
+        </li>
+        <li>
+          <a href=""
+            ><svg width="40" height="40">
+              <use href="./src/img/sprite.svg#icon-linkedin"></use></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
