--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
           <ul class="header-nav">
             <li>
-              <a class="header-nav-link active" href="/index.html">Studio</a>
+              <a class="header-nav-link active" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="header-nav-link" href="/portfolio.html">Portfolio</a>
+              <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="header-nav-link" href="/contact.html">Contact</a>
+              <a class="header-nav-link" href="./contacts.html">Contact</a>
             </li>
           </ul>
         </nav>
@@ -682,13 +682,13 @@
 
       <ul class="pages-list">
         <li class="pages-item">
-          <a class="pages-list-link active" href="/index.html">Studio</a>
+          <a class="pages-list-link active" href="./index.html">Studio</a>
         </li>
         <li class="pages-item">
-          <a class="pages-list-link" href="/portfolio.html">Portfolio</a>
+          <a class="pages-list-link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="pages-item">
-          <a class="pages-list-link" href="/contacts.html">Contacts</a>
+          <a class="pages-list-link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
 
