--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,15 @@
 
           <ul class="header-nav">
             <li>
-              <a class="header-nav-link" href="/index.html">Studio</a>
+              <a class="header-nav-link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="header-nav-link active" href="/portfolio.html"
+              <a class="header-nav-link active" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li>
-              <a class="header-nav-link" href="/contacts.html">Contact</a>
+              <a class="header-nav-link" href="./contacts.html">Contact</a>
             </li>
           </ul>
         </nav>
@@ -396,13 +396,13 @@
 
       <ul class="pages-list">
         <li class="pages-item">
-          <a class="pages-list-link" href="/index.html">Studio</a>
+          <a class="pages-list-link" href="./index.html">Studio</a>
         </li>
         <li class="pages-item">
-          <a class="pages-list-link active" href="/portfolio.html">Portfolio</a>
+          <a class="pages-list-link active" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="pages-item">
-          <a class="pages-list-link" href="/contacts.html">Contacts</a>
+          <a class="pages-list-link" href="./contacts.html">Contacts</a>
         </li>
       </ul>
 
