added .gitignore and img lazyloading

--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
     </header>
 
     <main>
-      <img src="./src/img/404.png" alt="404" />
+      <img src="./src/img/404.png" alt="404" loading="lazy"/>
     </main>
 
     <footer>
