--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,9 @@
               <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a class="header-nav-link active" href="./contact.html">Contact</a>
+              <a class="header-nav-link active" href="./contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
         </nav>
@@ -71,7 +73,12 @@
     </header>
 
     <main>
-      <img class="not-found-img" src="./src/img/404-development.png" alt="404" />
+      <img
+        class="not-found-img"
+        src="./src/img/404-development.png"
+        alt="404"
+        loading="lazy"
+      />
     </main>
 
     <footer>
