--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 srcset="./src/img/products/computer@2x.jpg 2x"
                 src="./src/img/products/computer.jpg"
                 alt="product1"
+                loading="lazy"
               />
             </li>
             <li class="product-item">
@@ -151,6 +152,7 @@
                 srcset="./src/img/products/app@2x.jpg 2x"
                 src="./src/img/products/app.jpg"
                 alt="product2"
+                loading="lazy"
               />
             </li>
             <li class="product-item">
@@ -158,6 +160,7 @@
                 srcset="./src/img/products/app2@2x.jpg 2x"
                 src="./src/img/products/app2.jpg"
                 alt="product3"
+                loading="lazy"
               />
             </li>
           </ul>
@@ -174,6 +177,7 @@
                 srcset="./src/img/team/mark_guerrero@2x.jpg 2x"
                 src="./src/img/team/mark_guerrero.jpg"
                 alt="Mark Guerrero"
+                loading="lazy"
               />
               <div class="team-member-info">
                 <h2 class="team-member-name">Mark Guerrero</h2>
@@ -232,6 +236,7 @@
                 srcset="./src/img/team/tom_ford@2x.jpg 2x"
                 src="./src/img/team/tom_ford.jpg"
                 alt="Tom Ford"
+                loading="lazy"
               />
               <div class="team-member-info">
                 <h2 class="team-member-name">Tom Ford</h2>
@@ -290,6 +295,7 @@
                 srcset="./src/img/team/camila_garcia@2x.jpg 2x"
                 src="./src/img/team/camila_garcia.jpg"
                 alt="Camila Garcia"
+                loading="lazy"
               />
               <div class="team-member-info">
                 <h2 class="team-member-name">Camila Garcia</h2>
@@ -348,6 +354,7 @@
                 srcset="./src/img/team/daniel_wilson@2x.jpg 2x"
                 src="./src/img/team/daniel_wilson.jpg"
                 alt="Daniel Wilson"
+                loading="lazy"
               />
               <div class="team-member-info">
                 <h2 class="team-member-name">Daniel Wilson</h2>
