--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,11 @@
         <ul class="portfolio-products">
           <li class="portfolio-products-item" data-category="app">
             <div class="overlay-wrapper">
-              <img src="./src/img/portfolio/bank_app.jpg" alt="banking_app" />
+              <img
+                src="./src/img/portfolio/bank_app.jpg"
+                alt="banking_app"
+                loading="lazy"
+              />
               <div class="overlay">
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -148,6 +152,7 @@
               <img
                 src="./src/img/portfolio/cashless_payment.jpg"
                 alt="cashless_payment"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -167,6 +172,7 @@
               <img
                 src="./src/img/portfolio/meditation_app.jpg"
                 alt="meditation_app"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -186,6 +192,7 @@
               <img
                 src="./src/img/portfolio/taxi_service.jpg"
                 alt="taxi_service"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -202,7 +209,11 @@
           </li>
           <li class="portfolio-products-item" data-category="design">
             <div class="overlay-wrapper">
-              <img src="./src/img/portfolio/screen.jpg" alt="screen" />
+              <img
+                src="./src/img/portfolio/screen.jpg"
+                alt="screen"
+                loading="lazy"
+              />
               <div class="overlay">
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -221,6 +232,7 @@
               <img
                 src="./src/img/portfolio/online_courses.jpg"
                 alt="online_courses"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -240,6 +252,7 @@
               <img
                 src="./src/img/portfolio/instagram_stories.jpg"
                 alt="instagram_stories"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -261,6 +274,7 @@
               <img
                 src="./src/img/portfolio/organic_food.jpg"
                 alt="organic_food"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -280,6 +294,7 @@
               <img
                 src="./src/img/portfolio/fresh_coffee.jpg"
                 alt="fresh_coffee"
+                loading="lazy"
               />
               <div class="overlay">
                 <p class="overlay-text">
@@ -399,7 +414,9 @@
           <a class="pages-list-link" href="./index.html">Studio</a>
         </li>
         <li class="pages-item">
-          <a class="pages-list-link active" href="./portfolio.html">Portfolio</a>
+          <a class="pages-list-link active" href="./portfolio.html"
+            >Portfolio</a
+          >
         </li>
         <li class="pages-item">
           <a class="pages-list-link" href="./contacts.html">Contacts</a>
